--- a/nais/prod-sbs.yml
+++ b/nais/prod-sbs.yml
@@ -1,4 +1,4 @@
-apiVersion: 'nais.io/v1alpha1'
+apiVersion: "nais.io/v1alpha1"
 kind: 'Application'
 metadata:
     name: midlertidig-alene
@@ -6,7 +6,7 @@ metadata:
     labels:
         team: dusseldorf
 spec:
-    image: { { image } }
+    image: {{ image }}
     port: 8080
     liveness:
         path: /familie/sykdom-i-familien/soknad/midlertidig-alene/health/isAlive
@@ -45,11 +45,7 @@ spec:
           value: /familie/sykdom-i-familien/soknad/midlertidig-alene
         - name: LOGIN_URL
           value: https://loginservice.nav.no/login?redirect=https://www.nav.no/familie/sykdom-i-familien/soknad/midlertidig-alene
-        - name: APP_VERSION
-          value: { { image } }
-        - name: PERSISTENCE
-          value: 'off'
         - name: APPSTATUS_PROJECT_ID
-          value: 'ryujtq87'
+          value: "ryujtq87"
         - name: APPSTATUS_DATASET
-          value: 'production'
+          value: "production"
