--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "busboy": "^0.3.1",
         "classnames": "^2.2.6",
         "compression": "^1.7.4",
+        "dayjs": "^1.9.6",
         "detect-browser": "^5.1.1",
         "dotenv": "^8.2.0",
         "eslint": "^7.10.0",
@@ -61,7 +62,6 @@
         "js-cookie": "^2.2.1",
         "lodash.debounce": "^4.0.8",
         "lodash.throttle": "^4.1.1",
-        "moment": "^2.29.1",
         "moment-timezone": "^0.5.31",
         "monocle-ts": "^2.3.3",
         "mustache-express": "^1.3.0",
