--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
         "@navikt/sif-common-soknad": "^2.0.4",
         "@sentry/browser": "^5.29.2",
         "@testing-library/react": "^11.2.2",
+        "amplitude-js": "^7.4.1",
         "axios": "^0.21.1",
         "busboy": "^0.3.1",
         "classnames": "^2.2.6",
         "compression": "^1.7.4",
+        "constate": "^3.1.0",
         "dayjs": "^1.10.2",
         "detect-browser": "^5.2.0",
         "dotenv": "^8.2.0",
@@ -85,6 +87,7 @@
         "@babel/plugin-transform-modules-commonjs": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
+        "@types/amplitude-js": "^7.0.0",
         "@types/classnames": "^2.2.11",
         "@types/enzyme": "^3.10.8",
         "@types/enzyme-adapter-react-16": "^1.0.6",
