--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@devexperts/remote-data-ts": "^2.0.4",
         "@formatjs/intl-pluralrules": "^4.0.5",
         "@navikt/fnrvalidator": "^1.1.3",
+        "@navikt/sif-common-amplitude": "^1.2.3",
         "@navikt/sif-common-core": "^7.1.8",
         "@navikt/sif-common-formik": "^13.0.7",
         "@navikt/sif-common-forms": "^11.0.1",
