--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
         "@devexperts/remote-data-ts": "^2.0.5",
         "@formatjs/intl-pluralrules": "^4.0.12",
         "@navikt/sif-common-amplitude": "^1.2.5",
-        "@navikt/sif-common-core": "^9.1.1",
-        "@navikt/sif-common-formik": "^19.0.2",
+        "@navikt/sif-common-core": "^9.1.2",
+        "@navikt/sif-common-formik": "^19.0.3",
+        "@navikt/sif-common-forms": "^14.0.10",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "^0.0.14",
-        "@navikt/sif-common-soknad": "^4.0.0",
+        "@navikt/sif-common-soknad": "^4.0.1",
         "@sentry/browser": "^6.2.2",
         "@testing-library/react": "^11.2.5",
         "amplitude-js": "^8.0.0",
@@ -66,7 +67,7 @@
         "mini-css-extract-plugin": "^1.3.9",
         "monocle-ts": "^2.3.9",
         "mustache-express": "^1.3.0",
-        "nav-datovelger": "^10.1.2",
+        "nav-datovelger": "^11.1.2",
         "newtype-ts": "^0.3.4",
         "object-hash": "^2.1.1",
         "promise": "^8.1.0",
