--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "dependencies": {
         "@devexperts/remote-data-ts": "^2.0.5",
         "@formatjs/intl-pluralrules": "^4.0.12",
-        "@navikt/sif-common-amplitude": "^1.2.5",
-        "@navikt/sif-common-core": "^9.1.2",
-        "@navikt/sif-common-formik": "^19.0.3",
-        "@navikt/sif-common-forms": "^14.0.10",
+        "@navikt/sif-common-amplitude": "^2.0.0",
+        "@navikt/sif-common-core": "^9.2.0",
+        "@navikt/sif-common-formik": "^19.1.13",
+        "@navikt/sif-common-forms": "^14.1.0",
         "@navikt/sif-common-question-config": "^0.0.7",
-        "@navikt/sif-common-sentry": "^0.0.14",
-        "@navikt/sif-common-soknad": "^4.0.1",
+        "@navikt/sif-common-sentry": "^0.1.2",
+        "@navikt/sif-common-soknad": "^4.0.3",
         "@sentry/browser": "^6.2.2",
         "@testing-library/react": "^11.2.5",
         "amplitude-js": "^8.0.0",
@@ -80,8 +80,7 @@
         "react-modal": "^3.12.1",
         "react-router-dom": "^5.2.0",
         "snyk": "^1.493.0",
-        "ulid": "^2.3.0",
-        "use-media": "^1.4.0"
+        "ulid": "^2.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.13.10",
@@ -111,19 +110,16 @@
         "@typescript-eslint/eslint-plugin": "^4.18.0",
         "@typescript-eslint/parser": "^4.18.0",
         "autoprefixer": "^10.2.5",
-        "awesome-typescript-loader": "^5.2.1",
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^26.6.3",
         "babel-polyfill": "^6.26.0",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
         "css-loader": "^5.1.3",
         "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.6",
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-react": "^7.23.2",
-        "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "fsevents": "^2.3.2",
         "html-webpack-harddisk-plugin": "^2.0.0",
         "html-webpack-plugin": "^5.3.1",
