--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
         "prettier": "^2.3.0",
         "pretty-quick": "^3.1.0",
         "regenerator-runtime": "^0.13.7",
+        "request": "^2.88.2",
         "rimraf": "^3.0.2",
         "source-map-loader": "^3.0.0",
         "style-loader": "^2.0.0",
