--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -1,7 +1,7 @@
 apiVersion: "nais.io/v1alpha1"
 kind: "Application"
 metadata:
-    name: midlertidig-alene
+    name: {{ app }}
     namespace: dusseldorf
     labels:
         team: dusseldorf
