--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "@devexperts/remote-data-ts": "^2.0.5",
         "@formatjs/intl-pluralrules": "^4.0.27",
         "@navikt/sif-common-amplitude": "^2.0.0",
-        "@navikt/sif-common-core": "^9.4.2",
+        "@navikt/sif-common-core": "^9.4.3-beta.2",
         "@navikt/sif-common-formik": "^19.6.0",
         "@navikt/sif-common-forms": "^14.2.1",
         "@navikt/sif-common-question-config": "^0.0.7",
