--- a/package.json
+++ b/package.json
@@ -24,26 +24,26 @@
     },
     "dependencies": {
         "@devexperts/remote-data-ts": "^2.0.5",
-        "@formatjs/intl-pluralrules": "^4.0.27",
+        "@formatjs/intl-pluralrules": "^4.1.3",
         "@navikt/sif-common-amplitude": "^2.0.0",
-        "@navikt/sif-common-core": "^9.4.2",
-        "@navikt/sif-common-formik": "^19.6.0",
-        "@navikt/sif-common-forms": "^14.2.1",
+        "@navikt/sif-common-core": "^9.4.13",
+        "@navikt/sif-common-formik": "^20.1.4",
+        "@navikt/sif-common-forms": "^16.0.0",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "^0.2.0",
-        "@navikt/sif-common-soknad": "^4.1.2",
-        "@sentry/browser": "^6.7.2",
-        "@testing-library/react": "^11.2.7",
-        "amplitude-js": "^8.3.1",
+        "@navikt/sif-common-soknad": "^4.2.0",
+        "@sentry/browser": "^6.12.0",
+        "@testing-library/react": "^12.0.0",
+        "amplitude-js": "^8.5.0",
         "axios": "^0.21.1",
         "busboy": "^0.3.1",
         "classnames": "^2.3.1",
         "compression": "^1.7.4",
-        "constate": "^3.2.0",
-        "dayjs": "^1.10.5",
+        "constate": "^3.3.0",
+        "dayjs": "^1.10.6",
         "detect-browser": "^5.2.0",
         "dotenv": "^10.0.0",
-        "eslint": "^7.29.0",
+        "eslint": "^7.32.0",
         "eslint-loader": "^4.0.2",
         "eslint-plugin-react-hooks": "^4.2.0",
         "express": "^4.17.1",
@@ -51,95 +51,96 @@
         "formik": "^2.2.9",
         "fs-extra": "^10.0.0",
         "helmet": "^4.6.0",
-        "history": "^5.0.0",
+        "history": "^5.0.1",
         "http-status-codes": "^2.1.4",
         "i18n-iso-countries": "^6.8.0",
         "intl": "^1.2.5",
         "io-ts": "^2.2.16",
-        "io-ts-reporters": "^1.2.2",
+        "io-ts-reporters": "^2.0.0",
         "iso8601-duration": "^1.3.0",
-        "js-cookie": "^2.2.1",
+        "js-cookie": "^3.0.1",
         "lodash.debounce": "^4.0.8",
         "lodash.throttle": "^4.1.1",
-        "mini-css-extract-plugin": "^1.6.0",
-        "monocle-ts": "^2.3.10",
+        "mini-css-extract-plugin": "^2.2.1",
+        "monocle-ts": "^2.3.11",
         "mustache-express": "^1.3.1",
-        "nav-datovelger": "^11.3.0",
+        "nav-datovelger": "^12.1.1",
         "newtype-ts": "^0.3.4",
         "object-hash": "^2.2.0",
         "promise": "^8.1.0",
         "react": "^17.0.2",
-        "react-aria-menubutton": "^7.0.2",
+        "react-aria-menubutton": "^7.0.3",
         "react-collapse": "^5.1.0",
         "react-day-picker": "^7.4.10",
         "react-dom": "^17.0.2",
-        "react-intl": "^5.20.3",
+        "react-intl": "^5.20.10",
         "react-modal": "^3.14.3",
-        "react-router-dom": "^5.2.0",
-        "snyk": "^1.640.0",
+        "react-router-dom": "^5.2.1",
+        "snyk": "^1.695.0",
         "ulid": "^2.3.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.14.6",
+        "@babel/core": "^7.15.0",
         "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
-        "@babel/plugin-transform-modules-commonjs": "^7.14.5",
-        "@babel/preset-env": "^7.14.7",
+        "@babel/plugin-transform-modules-commonjs": "^7.15.0",
+        "@babel/preset-env": "^7.15.0",
         "@babel/preset-react": "^7.14.5",
-        "@types/amplitude-js": "^8.0.0",
+        "@types/amplitude-js": "^8.0.1",
         "@types/classnames": "^2.3.1",
-        "@types/enzyme": "^3.10.8",
-        "@types/flat": "5.0.1",
+        "@types/enzyme": "^3.10.9",
+        "@types/flat": "5.0.2",
         "@types/intl": "^1.2.0",
-        "@types/jest": "^26.0.23",
-        "@types/js-cookie": "^2.2.6",
+        "@types/jest": "^27.0.1",
+        "@types/js-cookie": "^2.2.7",
         "@types/lodash.debounce": "^4.0.6",
         "@types/lodash.delay": "^4.1.6",
         "@types/lodash.isequal": "^4.5.5",
-        "@types/object-hash": "^2.1.0",
-        "@types/react": "^17.0.11",
-        "@types/react-aria-menubutton": "^6.2.7",
-        "@types/react-collapse": "^5.0.0",
-        "@types/react-document-title": "^2.0.4",
-        "@types/react-dom": "^17.0.8",
-        "@types/react-modal": "^3.12.0",
-        "@types/react-router-dom": "^5.1.7",
-        "@typescript-eslint/eslint-plugin": "^4.28.0",
-        "@typescript-eslint/parser": "^4.28.0",
-        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
-        "autoprefixer": "^10.2.6",
+        "@types/object-hash": "^2.1.1",
+        "@types/react": "^17.0.19",
+        "@types/react-aria-menubutton": "^6.2.8",
+        "@types/react-collapse": "^5.0.1",
+        "@types/react-document-title": "^2.0.5",
+        "@types/react-dom": "^17.0.9",
+        "@types/react-modal": "^3.12.1",
+        "@types/react-router-dom": "^5.1.8",
+        "@typescript-eslint/eslint-plugin": "^4.30.0",
+        "@typescript-eslint/parser": "^4.30.0",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+        "autoprefixer": "^10.3.3",
         "babel-core": "^7.0.0-bridge.0",
-        "babel-jest": "^27.0.5",
+        "babel-jest": "^27.1.0",
         "babel-polyfill": "^6.26.0",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
-        "css-loader": "^5.2.6",
+        "css-loader": "^6.2.0",
         "enzyme": "^3.11.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-react": "^7.24.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.25.1",
         "fsevents": "^2.3.2",
         "html-webpack-harddisk-plugin": "^2.0.0",
         "html-webpack-plugin": "^5.3.2",
-        "jest": "^27.0.5",
+        "jest": "^27.1.0",
         "jest-css-modules": "^2.1.0",
-        "jsdom": "^16.6.0",
+        "jsdom": "^17.0.0",
         "less": "^4.1.1",
-        "less-loader": "^10.0.0",
+        "less-loader": "^10.0.1",
         "npm-run-all": "^4.1.5",
         "postcss-input-range": "^4.0.0",
-        "postcss-loader": "^6.1.0",
-        "prettier": "^2.3.1",
+        "postcss-loader": "^6.1.1",
+        "prettier": "^2.3.2",
         "pretty-quick": "^3.1.1",
-        "regenerator-runtime": "^0.13.7",
+        "regenerator-runtime": "^0.13.9",
         "request": "^2.88.2",
         "rimraf": "^3.0.2",
         "source-map-loader": "^3.0.0",
-        "style-loader": "^2.0.0",
-        "svg-sprite-loader": "6.0.8",
-        "ts-jest": "^27.0.3",
-        "ts-loader": "^9.2.3",
-        "typescript": "^4.3.4",
-        "webpack": "^5.40.0",
+        "style-loader": "^3.2.1",
+        "svg-sprite-loader": "6.0.9",
+        "ts-jest": "^27.0.5",
+        "ts-loader": "^9.2.5",
+        "typescript": "^4.4.2",
+        "webpack": "^5.51.1",
+        "webpack-dev-middleware": "^5.0.0",
         "webpack-dev-server": "^3.11.2"
     },
     "resolutions": {
