--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "prepare": "npm run snyk-protect",
         "rm:dist": "rimraf dist/",
         "rm:nodemods": "rimraf node_modles/",
-        "snyk-protect": "snyk protect",
+        "snyk-protect": "snyk-protect",
         "start-api-mock": "PORT=8089 node ./server/api-mock.js",
         "start-express": "node ./server.js",
         "snd": "node ./src/build/scripts/start-dev-no-decorator.js",
@@ -25,120 +25,116 @@
     },
     "dependencies": {
         "@devexperts/remote-data-ts": "^2.1.1",
-        "@formatjs/intl-pluralrules": "^4.1.6",
+        "@formatjs/intl-pluralrules": "^4.3.2",
         "@navikt/sif-common-amplitude": "^2.2.3",
-        "@navikt/sif-common-core": "^9.4.17",
+        "@navikt/sif-common-core": "^11.0.0",
         "@navikt/sif-common-formik": "^20.1.4",
         "@navikt/sif-common-forms": "^16.0.0",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "^0.2.1",
-        "@navikt/sif-common-soknad": "^4.2.1",
+        "@navikt/sif-common-soknad": "^5.0.0",
         "@sentry/browser": "^6.15.0",
-        "@testing-library/react": "^12.1.2",
-        "amplitude-js": "^8.13.1",
+        "@snyk/protect": "^1.864.0",
+        "@testing-library/react": "^12.1.3",
+        "amplitude-js": "^8.17.0",
         "axios": "^0.21.2",
-        "busboy": "^0.3.1",
         "classnames": "^2.3.1",
         "compression": "^1.7.4",
         "constate": "^3.3.0",
-        "dayjs": "^1.10.7",
+        "dayjs": "^1.10.8",
         "detect-browser": "^5.3.0",
-        "dotenv": "^10.0.0",
-        "eslint": "^8.4.1",
+        "dotenv": "^16.0.0",
+        "eslint": "^8.10.0",
         "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-webpack-plugin": "^3.1.1",
-        "express": "^4.17.1",
+        "express": "^4.17.3",
         "flat": "^5.0.2",
         "formik": "^2.2.9",
-        "fs-extra": "^10.0.0",
-        "helmet": "^4.6.0",
-        "history": "^5.1.0",
-        "http-status-codes": "^2.1.4",
-        "i18n-iso-countries": "^7.1.0",
+        "fs-extra": "^10.0.1",
+        "helmet": "^5.0.2",
+        "history": "^5.3.0",
+        "http-status-codes": "^2.2.0",
+        "i18n-iso-countries": "^7.3.0",
         "intl": "^1.2.5",
         "io-ts": "^2.2.16",
-        "io-ts-reporters": "^2.0.0",
+        "io-ts-reporters": "^2.0.1",
         "iso8601-duration": "^1.3.0",
         "js-cookie": "^3.0.1",
         "lodash.debounce": "^4.0.8",
         "lodash.throttle": "^4.1.1",
-        "mini-css-extract-plugin": "^2.4.5",
-        "monocle-ts": "^2.3.11",
+        "mini-css-extract-plugin": "^2.6.0",
+        "monocle-ts": "^2.3.12",
         "mustache-express": "^1.3.2",
         "nav-datovelger": "^12.1.2",
-        "newtype-ts": "^0.3.4",
-        "object-hash": "^2.2.0",
+        "newtype-ts": "^0.3.5",
+        "object-hash": "^3.0.0",
         "promise": "^8.1.0",
         "react": "^17.0.2",
         "react-aria-menubutton": "^7.0.3",
         "react-collapse": "^5.1.1",
         "react-day-picker": "^7.4.10",
         "react-dom": "^17.0.2",
-        "react-intl": "^5.23.0",
+        "react-intl": "^5.24.6",
         "react-modal": "^3.14.4",
         "react-router-dom": "^5.2.1",
-        "snyk": "^1.785.0",
         "ulid": "^2.3.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.16.0",
-        "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
-        "@babel/plugin-transform-modules-commonjs": "^7.16.0",
-        "@babel/preset-env": "^7.16.4",
-        "@babel/preset-react": "^7.16.0",
-        "@types/amplitude-js": "^8.0.2",
-        "@types/enzyme": "^3.10.10",
+        "@babel/core": "^7.17.5",
+        "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
+        "@babel/plugin-transform-modules-commonjs": "^7.16.8",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-react": "^7.16.7",
+        "@types/amplitude-js": "^8.16.0",
+        "@types/enzyme": "^3.10.11",
         "@types/flat": "5.0.2",
         "@types/intl": "^1.2.0",
-        "@types/jest": "^27.0.3",
+        "@types/jest": "^27.4.1",
         "@types/js-cookie": "^3.0.1",
         "@types/lodash.debounce": "^4.0.6",
         "@types/lodash.delay": "^4.1.6",
         "@types/lodash.isequal": "^4.5.5",
         "@types/object-hash": "^2.2.1",
-        "@types/react": "^17.0.37",
-        "@types/react-aria-menubutton": "^6.2.8",
+        "@types/react": "^17.0.39",
+        "@types/react-aria-menubutton": "^6.2.9",
         "@types/react-collapse": "^5.0.1",
         "@types/react-document-title": "^2.0.5",
-        "@types/react-dom": "^17.0.11",
+        "@types/react-dom": "^17.0.13",
         "@types/react-modal": "^3.13.1",
-        "@types/react-router-dom": "^5.3.2",
-        "@typescript-eslint/eslint-plugin": "^5.6.0",
-        "@typescript-eslint/parser": "^5.6.0",
-        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
-        "autoprefixer": "^10.4.0",
+        "@types/react-router-dom": "^5.3.3",
+        "@typescript-eslint/eslint-plugin": "^5.14.0",
+        "@typescript-eslint/parser": "^5.14.0",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
         "babel-core": "^7.0.0-bridge.0",
-        "babel-jest": "^27.4.2",
+        "babel-jest": "^27.5.1",
         "babel-polyfill": "^6.26.0",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
-        "css-loader": "^6.5.1",
+        "css-loader": "^6.7.1",
         "enzyme": "^3.11.0",
-        "eslint-config-prettier": "^8.3.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.27.1",
+        "eslint-plugin-react": "^7.29.3",
         "html-webpack-harddisk-plugin": "^2.0.0",
         "html-webpack-plugin": "^5.5.0",
-        "jest": "^27.4.3",
+        "jest": "^27.5.1",
         "jest-css-modules": "^2.1.0",
         "jsdom": "^19.0.0",
         "less": "^4.1.2",
         "less-loader": "^10.2.0",
         "npm-run-all": "^4.1.5",
-        "postcss-input-range": "^4.0.0",
-        "postcss-loader": "^6.2.1",
         "prettier": "^2.5.1",
-        "pretty-quick": "^3.1.2",
+        "pretty-quick": "^3.1.3",
         "regenerator-runtime": "^0.13.9",
         "rimraf": "^3.0.2",
-        "source-map-loader": "^3.0.0",
+        "source-map-loader": "^3.0.1",
         "style-loader": "^3.3.1",
-        "ts-jest": "^27.1.0",
-        "ts-loader": "^9.2.6",
-        "typescript": "^4.5.2",
-        "webpack": "^5.65.0",
-        "webpack-dev-middleware": "^5.2.2",
-        "webpack-dev-server": "^4.6.0"
+        "ts-jest": "^27.1.3",
+        "ts-loader": "^9.2.7",
+        "typescript": "^4.6.2",
+        "webpack": "^5.70.0",
+        "webpack-dev-middleware": "^5.3.1",
+        "webpack-dev-server": "^4.7.4"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
