--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -5,6 +5,8 @@ metadata:
     namespace: dusseldorf
     labels:
         team: dusseldorf
+    annotations:
+        nginx.ingress.kubernetes.io/proxy-body-size: "100M"
 spec:
     image: {{ image }}
     port: 8080
@@ -48,3 +50,5 @@ spec:
      - name: {{@key}}
        value: "{{this}}"
     {{/each}}
+    tokenx:
+        enabled: true
