--- a/package.json
+++ b/package.json
@@ -25,50 +25,53 @@
     "dependencies": {
         "@devexperts/remote-data-ts": "^2.1.1",
         "@navikt/sif-common-amplitude": "^2.2.3",
-        "@navikt/sif-common-core": "^11.1.0",
+        "@navikt/sif-common-core": "^11.3.0",
         "@navikt/sif-common-formik": "^20.1.4",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-soknad": "^5.1.0",
-        "@snyk/protect": "^1.889.0",
+        "@snyk/protect": "^1.917.0",
         "@testing-library/react": "^12.1.4",
-        "amplitude-js": "^8.17.0",
+        "amplitude-js": "^8.18.1",
         "axios": "^0.21.2",
         "compression": "^1.7.4",
-        "dayjs": "^1.11.0",
+        "cookie-parser": "^1.4.6",
+        "dayjs": "^1.11.1",
         "dotenv": "^16.0.0",
-        "eslint": "^8.12.0",
-        "eslint-plugin-react-hooks": "^4.4.0",
+        "eslint": "^8.14.0",
+        "eslint-plugin-react-hooks": "^4.5.0",
         "eslint-webpack-plugin": "^3.1.1",
-        "express": "^4.17.3",
+        "express": "^4.18.1",
         "helmet": "^5.0.2",
         "history": "^5.3.0",
         "intl": "^1.2.5",
+        "jose": "^4.8.1",
         "mini-css-extract-plugin": "^2.6.0",
         "mustache-express": "^1.3.2",
         "object-hash": "^3.0.0",
+        "openid-client": "^5.1.5",
         "promise": "^8.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-intl": "^5.24.8",
+        "react-intl": "^5.25.1",
         "react-router-dom": "^5.2.1",
         "ulid": "^2.3.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.17.8",
+        "@babel/core": "^7.17.10",
         "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
-        "@babel/plugin-transform-modules-commonjs": "^7.17.7",
-        "@babel/preset-env": "^7.16.11",
+        "@babel/plugin-transform-modules-commonjs": "^7.17.9",
+        "@babel/preset-env": "^7.17.10",
         "@babel/preset-react": "^7.16.7",
         "@types/amplitude-js": "^8.16.0",
-        "@types/enzyme": "^3.10.11",
+        "@types/enzyme": "^3.10.12",
         "@types/intl": "^1.2.0",
         "@types/jest": "^27.4.1",
         "@types/object-hash": "^2.2.1",
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
         "@types/react-router-dom": "^5.3.3",
-        "@typescript-eslint/eslint-plugin": "^5.17.0",
-        "@typescript-eslint/parser": "^5.17.0",
+        "@typescript-eslint/eslint-plugin": "^5.22.0",
+        "@typescript-eslint/parser": "^5.22.0",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^27.5.1",
@@ -88,14 +91,14 @@
         "less": "^4.1.2",
         "less-loader": "^10.2.0",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.6.1",
+        "prettier": "^2.6.2",
         "rimraf": "^3.0.2",
         "source-map-loader": "^3.0.1",
         "ts-jest": "^27.1.4",
-        "ts-loader": "^9.2.8",
-        "typescript": "^4.6.3",
-        "webpack": "^5.70.0",
-        "webpack-dev-server": "^4.7.4"
+        "ts-loader": "^9.3.0",
+        "typescript": "^4.6.4",
+        "webpack": "^5.72.0",
+        "webpack-dev-server": "^4.8.1"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
