--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "express": "^4.18.1",
         "helmet": "^5.0.2",
         "history": "^5.3.0",
+        "http-proxy-middleware": "^2.0.6",
         "intl": "^1.2.5",
         "jose": "^4.8.1",
         "mini-css-extract-plugin": "^2.6.0",
