--- a/package.json
+++ b/package.json
@@ -24,54 +24,50 @@
     },
     "dependencies": {
         "@devexperts/remote-data-ts": "^2.1.1",
-        "@navikt/sif-common-amplitude": "^2.2.3",
-        "@navikt/sif-common-core": "^11.1.0",
-        "@navikt/sif-common-formik": "^22.1.0",
+        "@navikt/sif-common-amplitude": "^2.4.0",
+        "@navikt/sif-common-core": "^11.3.0",
+        "@navikt/sif-common-formik": "^23.1.0",
         "@navikt/sif-common-question-config": "^0.0.7",
-        "@navikt/sif-common-soknad": "^5.1.0",
-        "@snyk/protect": "^1.917.0",
-        "@testing-library/react": "^12.1.4",
-        "amplitude-js": "^8.18.1",
-        "axios": "^0.21.2",
+        "@navikt/sif-common-soknad": "^5.3.0",
+        "@snyk/protect": "^1.945.0",
+        "axios": "^0.27.2",
         "compression": "^1.7.4",
-        "dayjs": "^1.11.1",
-        "dotenv": "^16.0.0",
-        "eslint": "^8.14.0",
+        "dayjs": "^1.11.2",
+        "dotenv": "^16.0.1",
+        "eslint": "^8.16.0",
         "eslint-plugin-react-hooks": "^4.5.0",
         "eslint-webpack-plugin": "^3.1.1",
         "express": "^4.18.1",
-        "helmet": "^5.0.2",
+        "formik": "^2.2.9",
+        "helmet": "^5.1.0",
         "history": "^5.3.0",
-        "intl": "^1.2.5",
+        "jest-environment-jsdom": "^28.1.0",
         "mini-css-extract-plugin": "^2.6.0",
         "mustache-express": "^1.3.2",
+        "nav-datovelger": "^12.5.0",
         "object-hash": "^3.0.0",
         "promise": "^8.1.0",
         "react": "^17.0.2",
+        "react-day-picker": "^7.4.10",
         "react-dom": "^17.0.2",
         "react-intl": "^5.25.1",
         "react-router-dom": "^5.2.1",
         "ulid": "^2.3.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.17.10",
-        "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
-        "@babel/plugin-transform-modules-commonjs": "^7.17.9",
-        "@babel/preset-env": "^7.17.10",
-        "@babel/preset-react": "^7.16.7",
-        "@types/amplitude-js": "^8.16.0",
+        "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
+        "@babel/plugin-transform-modules-commonjs": "^7.18.2",
+        "@babel/preset-env": "^7.18.2",
+        "@babel/preset-react": "^7.17.12",
         "@types/enzyme": "^3.10.12",
-        "@types/intl": "^1.2.0",
-        "@types/jest": "^27.4.1",
+        "@types/jest": "^27.5.1",
         "@types/object-hash": "^2.2.1",
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
         "@types/react-router-dom": "^5.3.3",
-        "@typescript-eslint/eslint-plugin": "^5.22.0",
-        "@typescript-eslint/parser": "^5.22.0",
+        "@typescript-eslint/eslint-plugin": "^5.27.0",
+        "@typescript-eslint/parser": "^5.27.0",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
-        "babel-core": "^7.0.0-bridge.0",
-        "babel-jest": "^27.5.1",
         "babel-polyfill": "^6.26.0",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
         "css-loader": "^6.7.1",
@@ -79,23 +75,23 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.29.4",
+        "eslint-plugin-react": "^7.30.0",
         "html-webpack-harddisk-plugin": "^2.0.0",
         "html-webpack-plugin": "^5.5.0",
-        "jest": "^27.5.1",
+        "jest": "^28.1.0",
         "jest-css-modules": "^2.1.0",
         "jsdom": "^19.0.0",
         "less": "^4.1.2",
-        "less-loader": "^10.2.0",
+        "less-loader": "^11.0.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.6.2",
         "rimraf": "^3.0.2",
         "source-map-loader": "^3.0.1",
-        "ts-jest": "^27.1.4",
+        "ts-jest": "^28.0.3",
         "ts-loader": "^9.3.0",
-        "typescript": "^4.6.4",
-        "webpack": "^5.72.0",
-        "webpack-dev-server": "^4.8.1"
+        "typescript": "^4.7.2",
+        "webpack": "^5.72.1",
+        "webpack-dev-server": "^4.9.1"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
