--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@snyk/protect": "^1.947.0",
         "axios": "^0.27.2",
         "compression": "^1.7.4",
+        "cookie-parser": "^1.4.6",
         "dayjs": "^1.11.3",
         "dotenv": "^16.0.1",
         "eslint": "^8.17.0",
@@ -42,11 +43,14 @@
         "formik": "^2.2.9",
         "helmet": "^5.1.0",
         "history": "^5.3.0",
+        "http-proxy-middleware": "^2.0.6",
         "jest-environment-jsdom": "^28.1.1",
+        "jose": "^4.8.1",
         "mini-css-extract-plugin": "^2.6.0",
         "mustache-express": "^1.3.2",
         "nav-datovelger": "^12.5.0",
         "object-hash": "^3.0.0",
+        "openid-client": "^5.1.6",
         "promise": "^8.1.0",
         "react": "^17.0.2",
         "react-day-picker": "^7.4.10",
