--- a/package.json
+++ b/package.json
@@ -30,23 +30,27 @@
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "^0.3.1",
         "@navikt/sif-common-soknad": "^5.3.1",
-        "@snyk/protect": "^1.947.0",
+        "@snyk/protect": "^1.961.0",
         "axios": "^0.27.2",
         "compression": "^1.7.4",
+        "cookie-parser": "^1.4.6",
         "dayjs": "^1.11.3",
         "dotenv": "^16.0.1",
-        "eslint": "^8.17.0",
-        "eslint-plugin-react-hooks": "^4.5.0",
-        "eslint-webpack-plugin": "^3.1.1",
+        "eslint": "^8.18.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-webpack-plugin": "^3.2.0",
         "express": "^4.18.1",
         "formik": "^2.2.9",
         "helmet": "^5.1.0",
         "history": "^5.3.0",
-        "jest-environment-jsdom": "^28.1.1",
-        "mini-css-extract-plugin": "^2.6.0",
+        "http-proxy-middleware": "^2.0.6",
+        "jest-environment-jsdom": "^28.1.2",
+        "jose": "^4.8.3",
+        "mini-css-extract-plugin": "^2.6.1",
         "mustache-express": "^1.3.2",
         "nav-datovelger": "^12.5.0",
         "object-hash": "^3.0.0",
+        "openid-client": "^5.1.7",
         "promise": "^8.1.0",
         "react": "^17.0.2",
         "react-day-picker": "^7.4.10",
@@ -56,43 +60,43 @@
         "ulid": "^2.3.0"
     },
     "devDependencies": {
-        "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
-        "@babel/plugin-transform-modules-commonjs": "^7.18.2",
-        "@babel/preset-env": "^7.18.2",
-        "@babel/preset-react": "^7.17.12",
+        "@babel/plugin-proposal-object-rest-spread": "^7.18.6",
+        "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+        "@babel/preset-env": "^7.18.6",
+        "@babel/preset-react": "^7.18.6",
         "@types/enzyme": "^3.10.12",
-        "@types/jest": "^27.5.1",
+        "@types/jest": "^28.1.3",
         "@types/object-hash": "^2.2.1",
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
         "@types/react-router-dom": "^5.3.3",
-        "@typescript-eslint/eslint-plugin": "^5.27.1",
-        "@typescript-eslint/parser": "^5.27.1",
+        "@typescript-eslint/eslint-plugin": "^5.30.0",
+        "@typescript-eslint/parser": "^5.30.0",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
         "babel-polyfill": "^6.26.0",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
         "css-loader": "^6.7.1",
         "enzyme": "^3.11.0",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-jsx-a11y": "^6.5.1",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.30.0",
+        "eslint-plugin-jsx-a11y": "^6.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.30.1",
         "html-webpack-harddisk-plugin": "^2.0.0",
         "html-webpack-plugin": "^5.5.0",
-        "jest": "^28.1.1",
+        "jest": "^28.1.2",
         "jest-css-modules": "^2.1.0",
-        "jsdom": "^19.0.0",
+        "jsdom": "^20.0.0",
         "less": "^4.1.3",
         "less-loader": "^11.0.0",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.6.2",
+        "prettier": "^2.7.1",
         "rimraf": "^3.0.2",
-        "source-map-loader": "^3.0.1",
-        "ts-jest": "^28.0.4",
-        "ts-loader": "^9.3.0",
-        "typescript": "^4.7.3",
+        "source-map-loader": "^4.0.0",
+        "ts-jest": "^28.0.5",
+        "ts-loader": "^9.3.1",
+        "typescript": "^4.7.4",
         "webpack": "^5.73.0",
-        "webpack-dev-server": "^4.9.2"
+        "webpack-dev-server": "^4.9.3"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
