--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "build": "node src/build/scripts/production-build.js",
         "dev-api": "PORT=8089 node ./server/api-mock.js",
         "dev": "npm-run-all -p rm:dist dev-api start-no-decorator",
-        "devd": "npm-run-all -p rm:dist dev-api start",
         "prepare": "npm run snyk-protect",
         "rm:dist": "rimraf dist/",
         "snyk-protect": "snyk-protect",
@@ -19,8 +18,7 @@
         "start-no-decorator": "node ./src/build/scripts/start-dev-no-decorator.js",
         "start-server-local": "npm-run-all -s rm:dist build -p dev-api server-test:local",
         "start": "node ./src/build/scripts/start-dev.js",
-        "test": "jest --maxWorkers=2 --config ./jest/jest.config.js",
-        "test2": "jest --maxWorkers=2 --config ./jest/jest.config.js --collectCoverage=true"
+        "test": "jest --maxWorkers=2 --config ./jest/jest.config.js"
     },
     "dependencies": {
         "@devexperts/remote-data-ts": "^2.1.1",
@@ -28,15 +26,15 @@
         "@navikt/sif-common-core": "^11.3.0",
         "@navikt/sif-common-formik": "^23.1.0",
         "@navikt/sif-common-question-config": "^0.0.7",
-        "@navikt/sif-common-sentry": "^0.3.1",
+        "@navikt/sif-common-sentry": "^0.3.2",
         "@navikt/sif-common-soknad": "^5.3.1",
-        "@snyk/protect": "^1.981.0",
+        "@snyk/protect": "^1.984.0",
         "axios": "^0.27.2",
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "dayjs": "^1.11.4",
         "dotenv": "^16.0.1",
-        "eslint": "^8.20.0",
+        "eslint": "^8.21.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-webpack-plugin": "^3.2.0",
         "express": "^4.18.1",
@@ -48,7 +46,7 @@
         "jose": "^4.8.3",
         "mini-css-extract-plugin": "^2.6.1",
         "mustache-express": "^1.3.2",
-        "nav-datovelger": "^12.5.0",
+        "nav-datovelger": "^12.6.0",
         "object-hash": "^3.0.0",
         "openid-client": "^5.1.8",
         "promise": "^8.1.0",
@@ -62,7 +60,7 @@
     "devDependencies": {
         "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
         "@babel/plugin-transform-modules-commonjs": "^7.18.6",
-        "@babel/preset-env": "^7.18.9",
+        "@babel/preset-env": "^7.18.10",
         "@babel/preset-react": "^7.18.6",
         "@types/enzyme": "^3.10.12",
         "@types/jest": "^28.1.6",
@@ -70,8 +68,8 @@
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
         "@types/react-router-dom": "^5.3.3",
-        "@typescript-eslint/eslint-plugin": "^5.31.0",
-        "@typescript-eslint/parser": "^5.31.0",
+        "@typescript-eslint/eslint-plugin": "^5.33.0",
+        "@typescript-eslint/parser": "^5.33.0",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
         "babel-polyfill": "^6.26.0",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
