--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@navikt/sif-common-soknad": "^5.3.0",
         "@snyk/protect": "^1.946.0",
         "axios": "^0.27.2",
+        "cheerio": "^1.0.0-rc.12",
         "compression": "^1.7.4",
         "dayjs": "^1.11.2",
         "dotenv": "^16.0.1",
