Fjerne intro, oppdatere velkommen (#99)
Fjerne intro, oppdatere velkommen

--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
         "@navikt/sif-common-core": "^11.3.0",
         "@navikt/sif-common-formik": "^23.1.0",
         "@navikt/sif-common-question-config": "^0.0.7",
+        "@snyk/protect": "^1.1069.0",
         "@navikt/sif-common-sentry": "^0.3.2",
         "@navikt/sif-common-soknad": "^5.3.1",
-        "@snyk/protect": "^1.1064.0",
         "axios": "^0.27.2",
+        "cheerio": "^1.0.0-rc.12",
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "dayjs": "^1.11.6",
