--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
         "@navikt/sif-common-core": "^11.3.0",
         "@navikt/sif-common-formik": "^23.1.0",
         "@navikt/sif-common-question-config": "^0.0.7",
-        "@snyk/protect": "^1.1069.0",
         "@navikt/sif-common-sentry": "^0.3.2",
         "@navikt/sif-common-soknad": "^5.3.1",
+        "@snyk/protect": "^1.1069.0",
         "axios": "^0.27.2",
         "cheerio": "^1.0.0-rc.12",
         "compression": "^1.7.4",
@@ -56,7 +56,8 @@
         "react-dom": "^17.0.2",
         "react-intl": "^5.25.1",
         "react-router-dom": "^5.2.1",
-        "ulid": "^2.3.0"
+        "ulid": "^2.3.0",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
